--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
 LOG_LEVEL=info
+
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=inboundnumbers
+DB_PASSWORD=ECB8ump-dut9wvc2vth
+DB_ROOT_PASSWORD=ECB8ump-dut9wvc2vth
+DB_NAME=inbound_numbers
+
+ARI_HOST=asterisk.orb.local
+ARI_PROTOCOL=http
+ARI_PORT=8088
+ARI_USERNAME=username
+ARI_PASSWORD=password
+ARI_APP_NAME=inbound-app
