--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@swc/core": "^1.3.99",
     "@types/ari-client": "^2.2.12",
     "@types/node": "^20.10.0",
+    "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "eslint": "^8.54.0",
     "prettier": "^3.1.0",
@@ -28,6 +29,7 @@
     "ari-client": "^2.2.0",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17",
     "winston": "^3.11.0"
