fix file extensions in build, include InboundNumber entity explicitly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,11 @@
 
     // TypeORM stuff
     "emitDecoratorMetadata": true, // Enables experimental support for emitting type metadata for decorators.
-    "experimentalDecorators": true, // Enables experimental support for ES7 decorators.
+    "experimentalDecorators": true // Enables experimental support for ES7 decorators.
+  },
+  "tsc-alias": {
+    "resolveFullPaths": true,
+    "verbose": false
   },
   "include": ["./**/*.ts"],
   "exclude": [
