--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start:dev": "ts-node --swc src/app.ts",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "start": "node build/app.js",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migrations:generate": "npm run typeorm -- -d ./src/data-source.ts migration:generate ./src/migrations/$npm_config_name",
@@ -23,7 +24,8 @@
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "eslint": "^8.54.0",
     "prettier": "^3.1.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.8"
   },
   "dependencies": {
     "ari-client": "^2.2.0",
