--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "ts-node --swc src/app.ts",
     "build": "tsc && tsc-alias",
-    "start": "node build/app.js",
+    "start": "ts-node --swc src/app.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migrations:generate": "npm run typeorm -- -d ./src/data-source.ts migration:generate ./src/migrations/$npm_config_name",
     "migrations:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
