--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-LOG_LEVEL=info
+LOG_LEVEL=debug
 
 DB_HOST=localhost
 DB_PORT=3306
@@ -7,9 +7,20 @@ DB_PASSWORD=ECB8ump-dut9wvc2vth
 DB_ROOT_PASSWORD=ECB8ump-dut9wvc2vth
 DB_NAME=inbound_numbers
 
-ARI_HOST=asterisk.orb.local
+ARI_HOST=localhost
 ARI_PROTOCOL=http
 ARI_PORT=8088
 ARI_USERNAME=username
 ARI_PASSWORD=password
 ARI_APP_NAME=inbound-app
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=alert@gmail.com
+SMTP_PASSWORD=1234
+
+MAIL_FROM=alert@gmail.com
+MAIL_SUBJECT=Voicemail
+
+VOICEMAIL_CONTEXT=to-voicemail
+VOICEMAIL_DIRECTORY=/opt/voicemail
