--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:dev": "ts-node --swc src/app.ts",
     "build": "tsc && tsc-alias",
     "start": "ts-node --swc src/app.ts",
+    "start:cronjob": "ts-node --swc src/cronjob.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migrations:generate": "npm run typeorm -- -d ./src/data-source.ts migration:generate ./src/migrations/$npm_config_name",
     "migrations:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
