--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && tsc-alias",
     "start": "ts-node --swc src/app.ts",
     "start:cronjob": "ts-node --swc src/cronjob.ts",
+    "start:test": "ts-node --swc src/test.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migrations:generate": "npm run typeorm -- -d ./src/data-source.ts migration:generate ./src/migrations/$npm_config_name",
     "migrations:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
@@ -30,6 +31,7 @@
   "dependencies": {
     "@types/fluent-ffmpeg": "^2.1.24",
     "ari-client": "^2.2.0",
+    "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "fluent-ffmpeg": "^2.1.2",
     "mysql2": "^3.6.5",
