--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "ts-node --swc src/app.ts",
     "start:cronjob": "ts-node --swc src/cronjob.ts",
     "start:test": "ts-node --swc src/test.ts",
+    "start:inbound_route_17087298587": "ts-node --swc src/inbound_route_17087298587.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migrations:generate": "npm run typeorm -- -d ./src/data-source.ts migration:generate ./src/migrations/$npm_config_name",
     "migrations:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
@@ -38,6 +39,7 @@
     "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17",
+    "undici-types": "^6.0.1",
     "winston": "^3.11.0"
   }
 }
