add configuration storage

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ ARI_PORT=8088
 ARI_USERNAME=username
 ARI_PASSWORD=password
 ARI_APP_NAME=inbound-app
+ARI_APP_NAME_17087298587=inbound_route_17087298587
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
@@ -26,3 +27,7 @@ VOICEMAIL_CONTEXT=to-voicemail
 VOICEMAIL_DIRECTORY=/opt/voicemail
 
 PUSH_NOTIFICATION_URL=https://url.com
+
+TRUNK_NAME=trunk
+GREETING_SOUND=hello
+CALLER_ID=1234567890
