--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17",
     "undici-types": "^6.0.1",
+    "wav-file-info": "^0.0.10",
     "winston": "^3.11.0"
   }
 }
