add call recording stuff to config

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,9 @@ MAIL_SUBJECT=Voicemail
 VOICEMAIL_CONTEXT=to-voicemail
 VOICEMAIL_DIRECTORY=/opt/voicemail
 
+CALL_RECORDING_DIRECTORY=finished
+CALL_RECORDING_BASE_DIRECTORY=/var/spool/asterisk/recording
+
 PUSH_NOTIFICATION_URL=https://url.com
 
 TRUNK_NAME=trunk
