add prompt citation-related configuration parameters

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,10 @@ TRUNK_NAME=trunk
 GREETING_SOUND=hello
 CALLER_ID=1234567890
 INBOUND_QUEUE_RING_TIME=15
+
+PROMPT_CITATION_IVR_GREETING_SOUND=citation-greeting
+PROMPT_CITATION_QUEUE_CALLBACK_INFO_SOUND=citation-callback-info
+PROMPT_CITATION_QUEUE_CALLBACK_CONFIRMATION_SOUND_ONE=citation-callback-confirm-1
+PROMPT_CITATION_QUEUE_CALLBACK_CONFIRMATION_SOUND_TWO=citation-callback-confirm-2
+PROMPT_CITATION_QUEUE_CALLBACK_INFO_SOUND_INTERVAL_MS=60000
+PROMPT_CITATION_API_BASE_URL=http://promptcitationapi.ltd
