--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "eslint": "^8.54.0",
+    "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.8"
