--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
     "ts-node": "^10.9.1",
-    "tsc-alias": "^1.8.8"
+    "tsc-alias": "^1.8.8",
+    "tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
     "@types/fluent-ffmpeg": "^2.1.24",
