--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start:cronjob": "ts-node --swc src/cronjob.ts",
     "start:test": "ts-node --swc src/test.ts",
     "start:inbound_route_17087298587": "ts-node --swc src/inbound_route_17087298587.ts",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint --fix --ext .ts",
+    "format": "prettier --write \"**/*.{js,ts}\"",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migrations:generate": "npm run typeorm -- -d ./src/data-source.ts migration:generate ./src/migrations/$npm_config_name",
     "migrations:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
@@ -23,11 +26,13 @@
     "@types/ari-client": "^2.2.12",
     "@types/node": "^20.10.0",
     "@types/nodemailer": "^6.4.14",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
     "eslint": "^8.54.0",
-    "prettier": "^3.1.0",
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.2",
     "ts-node": "^10.9.1",
-    "tsc-alias": "^1.8.8"
+    "tsc-alias": "^1.8.8",
+    "tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
     "@types/fluent-ffmpeg": "^2.1.24",
