--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "ts-node --swc src/app.ts",
-    "build": "tsc && tsc-alias",
     "start": "ts-node --swc src/app.ts",
+    "start:dev": "nodemon --config nodemon.json",
     "start:cronjob": "ts-node --swc src/cronjob.ts",
     "start:test": "ts-node --swc src/test.ts",
     "start:inbound_route_17087298587": "ts-node --swc src/inbound_route_17087298587.ts",
+    "build": "tsc",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint --fix --ext .ts",
     "format": "prettier --write \"**/*.{js,ts}\"",
-    "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migrations:generate": "npm run typeorm -- -d ./src/data-source.ts migration:generate ./src/migrations/$npm_config_name",
     "migrations:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
     "migrations:run": "npm run typeorm migration:run -- -d ./src/data-source.ts",
     "migrations:revert": "npm run typeorm migration:revert -- -d ./src/data-source.ts"
   },
-  "author": "",
+  "author": "Soslan Aldatov <soslanaldatov@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@swc/core": "^1.3.99",
