add prompt citation queue ring time to config

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,4 @@ PROMPT_CITATION_QUEUE_CALLBACK_CONFIRMATION_SOUND_ONE=citation-callback-confirm-
 PROMPT_CITATION_QUEUE_CALLBACK_CONFIRMATION_SOUND_TWO=citation-callback-confirm-2
 PROMPT_CITATION_QUEUE_CALLBACK_INFO_SOUND_INTERVAL_MS=60000
 PROMPT_CITATION_API_BASE_URL=http://promptcitationapi.ltd
+PROMPT_CITATION_QUEUE_RING_TIME=3600
