--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "fluent-ffmpeg": "^2.1.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
